--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </p>
             
             <div id="directory">
-                <a class ="link" href="www.linkedin.com/in/jewel-maldonado-1b8691223">
+                <a class ="link" href="https://www.linkedin.com/in/jewel-maldonado-1b8691223/">
                     <img src="assets/linkedin.png">
                 </a>
 
