no opener no referrer

--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
             <h3>Computer Science Student</h3> 
             <hr />
             <p> 
-                Hi! Nice to meet you.
+                Hi! Nice to meet you. Lets Connect!
             </p>
             
             <div id="directory">
-                <a class ="link" href="https://www.linkedin.com/in/jewel-maldonado-1b8691223/">
+                <a class ="link" href="https://www.linkedin.com/in/jewel-maldonado-1b8691223/" target="_blank" rel="noopener noreferrer">
                     <img src="assets/linkedin.png">
                 </a>
 
-                <a class = "link" href="https://github.com/je-el">
+                <a class = "link" href="https://github.com/je-el" target="_blank" rel="noopener noreferrer">
                     <img src="assets/github.png">
                 </a>
             </div>
